// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Service Header Handling combineHeaders() can combine optional and default headers 1`] = `
Object {
  "Accept": "application/hal+json, application/json",
  "Accept-Encoding": "gzip,deflate",
  "Accept-Language": "en-US",
  "Authorization": "Basic YTpi",
  "BreakfastFoods": "AreTheBest",
  "Connection": "Keep-Alive",
  "Content-Type": "application/json",
  "Proxy-Connection": "Keep-Alive",
  "User-Agent": "carrier360 (compatible; Mozilla/5.0; MSIE 9.0; Trident/5.0; ios)",
}
`;

exports[`Request Service Header Handling combineHeaders() can omit auth from headers when necessary 1`] = `
Object {
  "Accept": "application/hal+json, application/json",
  "Accept-Encoding": "gzip,deflate",
  "Accept-Language": "en-US",
  "BreakfastFoods": "AreTheBest",
  "Connection": "Keep-Alive",
  "Content-Type": "application/json",
  "Proxy-Connection": "Keep-Alive",
  "User-Agent": "carrier360 (compatible; Mozilla/5.0; MSIE 9.0; Trident/5.0; ios)",
}
`;

exports[`Request Service Request Handling request() can make an HTTP request using fetch 1`] = `
Object {
  "body": "baconbaconbacon",
  "headers": Object {
    "Accept": "application/hal+json, application/json",
    "Accept-Encoding": "gzip,deflate",
    "Accept-Language": "en-US",
    "Authorization": "Basic YTpi",
    "BreakfastFoods": "AreTheBest",
    "Connection": "Keep-Alive",
    "Content-Type": "application/json",
    "Proxy-Connection": "Keep-Alive",
    "User-Agent": "carrier360 (compatible; Mozilla/5.0; MSIE 9.0; Trident/5.0; ios)",
  },
  "method": "GET",
  "url": "http://example.com",
}
`;

exports[`Request Service Request Handling request() can return an error message when an http request fails 1`] = `[TypeError: response.json is not a function]`;
